# tme_databricks_demo_001

./: .gitignore  LICENSE  README.md
ai_workflow_evaluator/: README.md  pyproject.toml
ai_workflow_evaluator/datamodel/: datamodel_db_ddl.sql  observation_deck_queries.sql
ai_workflow_evaluator/evaluator/: __init__.py  episode.py  invariants.py  metrics.py  scoring.py  submission.py
ai_workflow_evaluator/notebooks/: demo_evaluator.ipynb  observation_deck.ipynb  seed_and_browse_datamodel_db.ipynb  setup_datamodel_db.ipynb
ai_workflow_evaluator/notebooks/mlruns/0/: meta.yaml
ai_workflow_evaluator/notebooks/mlruns/766435583662795188/: meta.yaml
ai_workflow_evaluator/notebooks/mlruns/940928900561953451/: meta.yaml
ai_workflow_evaluator/notebooks/mlruns/940928900561953451/01e465ae7b02490b92b381580c9fc075/: meta.yaml
ai_workflow_evaluator/notebooks/mlruns/940928900561953451/032c6cc39e2a419a95e0b88c60e8a7bf/: meta.yaml
ai_workflow_evaluator/notebooks/mlruns/940928900561953451/046c128cf62f4ef19e3e15ac6a5f4fb3/: meta.yaml
ai_workflow_evaluator/notebooks/mlruns/940928900561953451/0792c8e9730a49f1b2bfbbc21dbe8343/: meta.yaml
tme_lab_assembler/: README.md  pyproject.toml
tme_lab_assembler/infra/databricks/init-scripts/: install_terraform.sh
tme_lab_assembler/infra/terraform/azure_nginx_lb_dns/: main.tf  outputs.tf  providers.tf  variables.tf
tme_lab_assembler/infra/terraform/mvp/: main.tf  outputs.tf  providers.tf  variables.tf
tme_lab_assembler/notebooks/: lab_assembler_mvp.ipynb  lab_assembler_mvp.py  lab_assembler_mvp_local.ipynb  lab_assembler_tfvars.py
tme_lab_assembler/tme_lab_assembler/: __init__.py  artifacts.py  auth.py  persistence.py  terraform.py
tme_lab_assembler/tools/: ipynb_to_databricks_py.py
(+946 files in other folders)
