[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tme-lab-assembler"
version = "0.1.0"
description = "TME lab assembler MVP: Databricks notebook + Terraform + artifact handoff"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TME" }]
license = { file = "LICENSE" }

dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]
azure = ["azure-identity>=1.16", "azure-mgmt-resource>=23.1"]
gcp = ["google-auth>=2.30", "google-cloud-resource-manager>=1.12"]
all = ["boto3>=1.34", "azure-identity>=1.16", "azure-mgmt-resource>=23.1", "google-auth>=2.30", "google-cloud-resource-manager>=1.12"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["tme_lab_assembler*"]
